--- a/package.json
+++ b/package.json
@@ -11,15 +11,18 @@
   },
   "dependencies": {
     "@emailjs/browser": "^4.4.1",
+    "@reduxjs/toolkit": "^2.8.2",
     "@tailwindcss/vite": "^4.1.8",
+    "axios": "^1.10.0",
     "lottie-react": "^2.4.1",
     "lucide-react": "^0.513.0",
     "motion": "^12.16.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
+    "react-redux": "^9.2.0",
     "react-router-dom": "^7.6.2",
-    "sonner": "^2.0.5",
+    "sonner": "^2.0.6",
     "tailwindcss": "^4.1.8"
   },
   "devDependencies": {
