--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "@reduxjs/toolkit": "^2.8.2",
     "@tailwindcss/vite": "^4.1.8",
     "axios": "^1.10.0",
+    "browser-image-compression": "^2.0.2",
     "lottie-react": "^2.4.1",
     "lucide-react": "^0.513.0",
     "motion": "^12.16.0",
@@ -22,6 +23,7 @@
     "react-icons": "^5.5.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.6.2",
+    "react-type-animation": "^3.2.0",
     "recharts": "^3.1.0",
     "sonner": "^2.0.6",
     "tailwindcss": "^4.1.8"
